* two hardcoded users can send messages to each other * all messaging is based now on MessageService which is main message controller * in chat-component added two invisible messages to keep chat window in correct size

--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -38,6 +38,10 @@ div {
   color: #000;
 }
 
+.hidden-message {
+  visibility: hidden;
+}
+
 p {
   padding-left: 0.5em;
   padding-right: 0.5em;
